@@ -78,7 +78,7 @@
     ]
 ]
 
-let rec fib = function | 0|1 -> 1 | n -> (fib (n - 1)) + (fib (n - 2))
+let rec fib = function | 0 | 1 -> 1 | n -> (fib (n - 1)) + (fib (n - 2))
 [
   structure_item (test_locations.ml[17,534+0]..test_locations.ml[19,572+34])
     Tstr_value Rec
