@@ -78,7 +78,7 @@
     ]
 ]
 
-let rec fib = function | 0|1 -> 1 | n -> (fib (n - 1)) + (fib (n - 2))
+let rec fib = function | 0 | 1 -> 1 | n -> (fib (n - 1)) + (fib (n - 2))
 [
   structure_item 
     Tstr_value Rec
